[tool.poetry]
name = "w3tools"
version = "0.1.0"
description = ""
authors = ["wanger <wangereth@icloud.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
web3 = "^6.19.0"
loguru = "^0.7.2"
pyrate-limiter = "^3.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
