[tool.poetry]
authors = ["wanger <wangereth@icloud.com>"]
description = "w3tools is a Python library that provides a set of tools to enhance the development of Web3 applications"
license = "MIT"
name = "w3tools"
readme = "README.md"
version = "0.1.2"

[tool.poetry.dependencies]
loguru = "^0.7.2"
pyrate-limiter = "^3.6.1"
python = "^3.10"
web3 = "^6.19.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
